# proyecto2_compiladores

./: .gitignore  CMakeLists.txt  ConstantFoldingVisitor.h  DOCKERFILE  DeadcodeeliminationVisitor.h  PeepholeVisitor.h  README.md  Sethi-UllmanVisitor.h  Typechecker.cpp  Typechecker.h  ast.cpp  ast.h  enviroment.h  main.cpp  parser.cpp  parser.h  run_all_inputs.py  scanner.cpp  scanner.h  server.js  token.cpp  token.h  visitor.cpp  visitor.h
backend/: server.js
backend/compiler/: ast-builder.js  compile-result.js  compiler-runner.js  optimization-details.js  tokenizer.js
inputs/: input1.txt  input10.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  input9.txt
outputs/: output1.txt  output10.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt  tokens_1.txt  tokens_10.txt  tokens_2.txt  tokens_3.txt  tokens_4.txt  tokens_5.txt  tokens_6.txt  tokens_7.txt  tokens_8.txt  tokens_9.txt
